--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -11,7 +11,8 @@ buildscript {
 plugins {
     id 'com.android.library'
     id 'maven-publish'
-    id 'idea'
+    id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
@@ -29,6 +30,12 @@ android {
         buildConfigField "String", "VERSION_NAME", "\"$versionName\""
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         consumerProguardFiles 'proguard-rules.pro'
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 
     buildTypes {
@@ -39,23 +46,33 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 
     lintOptions {
         abortOnError false
     }
+
 }
 
 dependencies {
     implementation project(":infobip-mobile-messaging-android-sdk")
     api project(":infobip-mobile-messaging-android-resources")
     implementation project(":infobip-mobile-messaging-api-java")
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.exifinterface:exifinterface:1.3.3'
-    implementation 'com.google.android.material:material:1.4.0'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$mm_kotlinVersion"
+    implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
+
+    implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
+    implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
+    implementation "com.google.android.material:material:$mm_materialVersion"
+    implementation 'androidx.exifinterface:exifinterface:1.3.6'
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -66,6 +83,9 @@ dependencies {
     testImplementation project(":infobip-mobile-messaging-android-test")
     testImplementation "junit:junit:4.12"
     testImplementation "org.mockito:mockito-core:1.10.19"
+
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$mm_desugarJdkVersion"
+    implementation 'com.android.support:multidex:2.0.1'
 }
 
 android.libraryVariants.all { variant ->
