--- a/infobip-rtc-ui/build.gradle
+++ b/infobip-rtc-ui/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
     implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
     implementation "com.google.android.material:material:$mm_materialVersion"
-    api("com.infobip:infobip-rtc:1.13.0@aar") {
+    api("com.infobip:infobip-rtc:2.0.6") {
         transitive = true
     }
 
