--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     api "com.google.android.gms:play-services-location:${mm_gmsLocationVersion}"
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
