Pull request #331: Okoroleva MM-5634 SonarQube
Merge in MML/infobip-mobile-messaging-android from okoroleva-MM-5634_SonarQube to master

Squashed commit of the following:

commit 9e6adbc91f65546c2279345d809678d6482e41d2
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Apr 13 10:29:12 2023 +0200

    minor updates

commit 159e99b54ee78bf4021966ff6bb4b9cd9e82db24
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Apr 12 17:10:31 2023 +0200

    fixes

commit 2ed17279ada96e5cee5aa5738d5cd7dda7f430ed
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Apr 12 17:09:41 2023 +0200

    enchancements

commit d28233a2f0a65baedd5bf2dec976053f367ee2de
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Apr 12 11:49:06 2023 +0200

    fixes for test coverage

commit 41cbc46f60e71ddf4d0b0260f3b7731b57890eb8
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Apr 10 15:32:30 2023 +0200

    coverage for conectedAndroidTest for separate modules

commit 9d78e01296ff94c6038269460217cb46eacf8b10
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Apr 6 15:36:24 2023 +0200

    small enchancement

commit f892c15470c5085244498f7cd9238c875372dde5
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Apr 5 17:01:53 2023 +0200

    exlusions for demo and cryptor

commit 45c8a903152a400a39635e06684ada4dc83f4236
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Mar 28 13:59:57 2023 +0200

    trying to make sq faster

commit 185fb5b984f2d4012745d9f211ac17605ad12395
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Mar 28 13:14:06 2023 +0200

    trying to make sq faster

commit 7084090cb9361c9d7ffe3868d7c7946c9625b529
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Mar 28 12:05:23 2023 +0200

    sonarqube

--- a/infobip-mobile-messaging-android-geo-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-geo-sdk/build.gradle
@@ -32,6 +32,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -122,3 +125,4 @@ ext {
     PUBLISH_ARTIFACT_ID = 'infobip-mobile-messaging-android-geo-sdk'
 }
 apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
+apply from: "${rootProject.projectDir}/jacoco.gradle"
