--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ plugins {
     id 'maven-publish'
     id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id "org.sonarqube" version "4.0.0.2929"
+    id "jacoco"
 }
 
 ext {
@@ -93,5 +95,27 @@ release {
     git {
         requireBranch = ''
         pushToRemote = 'origin'
+    }
+}
+
+sonar {
+    properties {
+        property "sonar.host.url", "https://sonar.ib-ci.com"
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.branch.name", System.getenv('BRANCH_NAME_TO_BUILD')
+        property "sonar.projectVersion", project.version
+        property "sonar.projectName", "infobip-mobile-messaging-android"
+        property "sonar.projectKey" , "infobip-mobile-messaging-android"
+        property "sonar.exclusions", "" +
+                "infobip-mobile-messaging-android-demo/**/*, " +
+                "infobip-mobile-messaging-android-cryptor-migration/**/*, " +
+                "infobip-mobile-messaging-android-test/**/*, " +
+                "infobip-rtc-ui/**/*"
+        property "sonar.java.coveragePlugin", "jacoco"
+        property "sonar.coverage.jacoco.xmlReportPaths", "" +
+                "${project.projectDir}/infobip-mobile-messaging-android-geo-sdk/build/reports/jacoco/debugCoverage/debugCoverage.xml, " +
+                "${project.projectDir}/infobip-mobile-messaging-android-inbox-sdk/build/reports/jacoco/debugCoverage/debugCoverage.xml, " +
+                "${project.projectDir}/infobip-mobile-messaging-android-sdk/build/reports/jacoco/debugCoverage/debugCoverage.xml, " +
+                "${project.projectDir}/infobip-mobile-messaging-api-java/build/reports/jacoco/test/jacocoTestReport.xml"
     }
 }
