--- a/infobip-mobile-messaging-android-inbox-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-inbox-sdk/build.gradle
@@ -33,6 +33,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -117,3 +120,4 @@ ext {
     PUBLISH_ARTIFACT_ID = 'infobip-mobile-messaging-android-inbox-sdk'
 }
 apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
+apply from: "${rootProject.projectDir}/jacoco.gradle"
