Pull request #336: removed exported from NotificationTapReceiverActivity
Merge in MML/infobip-mobile-messaging-android from okoroleva_MM-5698 to master

Squashed commit of the following:

commit 4e57431da2ac0057930a69d2b25f2a954640f90a
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Apr 21 15:01:41 2023 +0200

    removed exported from NotificationTapReceiverActivity

--- a/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-sdk/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
             android:excludeFromRecents="true"
             android:taskAffinity=""
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:exported="true" />
+            android:exported="false" />
 
     </application>
 </manifest>
