Pull request #360: MCA-2559 Updated InfobipRtcUi
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-2559-rtcui-readme-version-update to master

Squashed commit of the following:

commit 8d5388aee9ab3ec9e5e1324edf956dd7278b913c
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 11 08:58:52 2023 +0200

    MCA-2559 Review fixes

commit 0a081cf644536fadde70c699d1954d031e7571f1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 10 14:44:42 2023 +0200

    MCA-2559 Updated InfobipRtcUi readme and release updates version in readme

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,17 @@ task updateVersionInReadme {
     }
 }
 
-afterReleaseBuild.dependsOn updateVersionInReadme
+task updateRtcUiVersionInReadme {
+    doLast {
+        def readmeFile = new File('infobip-rtc-ui/README.md')
+        def text = readmeFile.text
+        readmeFile.withWriter { w ->
+            w << text.replaceFirst("'com.infobip:infobip-rtc-ui:\\d+\\.\\d+\\.\\S+'", "'com.infobip:infobip-rtc-ui:$version'")
+        }
+    }
+}
+
+afterReleaseBuild.dependsOn updateVersionInReadme, updateRtcUiVersionInReadme
 
 // workaround for `net.researchgate.release` plugin issue:
 // https://github.com/researchgate/gradle-release/issues/186
