Pull request #361: Jdzubak MCA-3069 chat push improvements
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3069-chat-push-improvements to master

Squashed commit of the following:

commit 95e1e0bc1ffc2f09091b762b45637d12d5962ef0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 17 11:19:52 2023 +0200

    MCA-3116 Public fun rename

commit 00adef2b266db9a0e24cd9c7d5028f47446dc38f
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jul 14 06:28:07 2023 +0000

    Applied suggestion

commit b80fd3887d0e44b94126696c965887fe7cd1dda0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Jul 13 11:02:32 2023 +0200

    MCA-3116 Chat disconnected when not visible to receive push. Gradle versions refactor.

commit dd6118b59244b1f45d394e25000e8c262eaa2375
Merge: 6a5a8786 519a2e2d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jul 11 11:09:13 2023 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-3069-chat-push-improvements

commit 6a5a87860baeecff4240d5b92e4c638525c8b643
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Jun 21 16:08:44 2023 +0200

    MCA-3010 PROTOTYPE Load blank page when chat is not active anymore to receive push

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
+    ext.mm_kotlinVersion = "1.7.20"
+    ext.mm_gradlePluginVersion = "7.2.2"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath "com.android.tools.build:gradle:$mm_gradlePluginVersion"
     }
 }
 
@@ -12,7 +14,7 @@ plugins {
     id 'net.researchgate.release' version '2.8.1'
     id 'maven-publish'
     id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.android' version "$mm_kotlinVersion" apply false
     id "org.sonarqube" version "4.0.0.2929"
     id "jacoco"
 }
@@ -24,12 +26,12 @@ ext {
     mm_buildToolsVersion = "33.0.0"
     mm_firebaseMessagingVersion = "22.0.0"
     mm_gmsLocationVersion = "18.0.0"
-    mm_kotlinVersion = "1.7.20"
     mm_constraintLayoutVersion = "2.1.4"
     mm_appCompatVersion = "1.6.1"
-    mm_materialVersion = "1.8.0"
+    mm_materialVersion = "1.9.0"
     mm_coreKtxVersion = "1.9.0"
     mm_desugarJdkVersion = "1.1.8"
+    mm_lifecycleVersion = "2.5.1"
 }
 
 allprojects {
