--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -4,7 +4,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath "com.android.tools.build:gradle:$mm_gradlePluginVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$mm_kotlinVersion"
     }
 }
 
