--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -81,6 +81,6 @@ publishing {
 }
 
 //Comment out for making local version
-//signing {
-//    sign publishing.publications
-//}
+signing {
+    sign publishing.publications
+}
