--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -66,6 +66,15 @@ android {
 }
 
 dependencies {
+    constraints {
+        implementation ("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
+
     implementation project(":infobip-mobile-messaging-android-sdk")
     api project(":infobip-mobile-messaging-android-resources")
     implementation project(":infobip-mobile-messaging-api-java")
