--- a/infobip-rtc-ui/build.gradle
+++ b/infobip-rtc-ui/build.gradle
@@ -56,6 +56,15 @@ android {
 }
 
 dependencies {
+    constraints {
+        implementation ("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
+
     implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$mm_kotlinVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
