Pull request #387: Ikresic MM-5974 android sdk release 9.0.0 version with full featured in apps
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-5974-android-sdk-release-9.0.0-version-with-full-featured-in-apps to master

Squashed commit of the following:

commit 8c3accd84e04d6ea26d36fcd7f99919e93fa0065
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Sep 28 11:20:41 2023 +0200

    - replaced api with compileOnly for CardView
    - other PR fixes

commit 5995524ed35131117bc93776a1d3076922c8b987
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Sep 28 10:53:24 2023 +0200

    - replaced api with compileOnly for CardView
    - other PR fixes

commit dcf4564670a04e3ab8c0bed008999e743c726b75
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Sep 28 10:51:37 2023 +0200

    - replaced api with compileOnly for CardView
    - other PR fixes

commit 16df18af00ade82bb218ca19cef8ec88a036488b
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Sep 27 16:41:31 2023 +0200

    - replaced api with compileOnly for CardView
    - other PR fixes

commit 3ebe10656ceaab4c953434d45a2aa6719e4e2484
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Sep 27 15:11:14 2023 +0200

    - cleanup and PR fixes

commit 70fec9d9582d0bf6b14e467603f9176e0b7f7776
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Sep 27 14:38:24 2023 +0200

    - cleanup and PR fixes

commit 986cf74dda9126b43c8bc4be9e17e4103085737a
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Sep 26 15:59:02 2023 +0200

    - cleanup

commit 18c74c4ad87966a5a5b486251d11846dd77d739d
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Sep 26 15:56:33 2023 +0200

    - cleanup

commit ca4e72b3d8778fcd0ca3049fde4fd2e240cfd1ec
Author: ikresic <ivan.kresic@infobip.com>
Date:   Tue Sep 26 15:40:50 2023 +0200

    - removed Full-Featured In-Apps initialization from demo app. Will provide separate flavor for this feature in the future

commit 8ef04dc77a2c3e85965fbb2fd84a1670ba5219b0
Author: ikresic

--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     testImplementation "junit:junit:4.12"
 
     implementation('com.google.code.gson:gson:2.9.0')
+    implementation('androidx.cardview:cardview:1.0.0')
 }
 
 android.libraryVariants.all { variant ->
