--- a/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.infobip.mobile.messaging.chat">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <queries>
         <!-- Camera -->
         <intent>
@@ -23,6 +22,13 @@
             android:noHistory="false"
             android:screenOrientation="portrait"
             android:theme="@style/IB_ChatDefaultTheme" />
+        <receiver
+            android:name=".core.PersonalizationBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="org.infobip.mobile.messaging.PERSONALIZED" />
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="org.infobip.mobile.messaging.chat.InAppChatImpl"
