Pull request #396: LCZ-449 - fix ask everytime camera bug, change permission denied buttons color, remove redudant permissions for attachments
Merge in MML/infobip-mobile-messaging-android from jmisko-LCZ-449-chat_permissions to master

Squashed commit of the following:

commit 385edd5957f5e45190b006ed9aea5b22c65b79d6
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Fri Oct 27 15:24:30 2023 +0200

    LCZ-449 Fixed review point

commit 38ce260009203a20d7a5ab510db5a1dfc2d9a0f3
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Tue Oct 24 16:12:45 2023 +0200

    LCZ-449 - fix ask everytime camera bug, change permission denied buttons color, remove redudant permissions for attachments

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application>
         <activity
