Pull request #397: Aboldyrev MM-6037 api 34
Merge in MML/infobip-mobile-messaging-android from aboldyrev-MM-6037-api_34 to master

Squashed commit of the following:

commit faaf2be8c6171fc1f69eae9e4e5610593f6ce45c
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Mon Oct 30 11:26:01 2023 +0100

    changed check

commit 352d578a65ae60302da6238b9a48d9f02a1874d9
Merge: 671338b9 762c0aa8
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Mon Oct 30 09:30:00 2023 +0100

    Merge branch 'master' into aboldyrev-MM-6037-api_34

commit 671338b962b77d326a61c3ac0dcad834029a7f44
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Thu Oct 26 14:31:29 2023 +0200

    - removed extras

commit dde5f37e0dc4ac802b0d53c2b4972dbab7fa7426
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Tue Oct 24 16:56:06 2023 +0200

    - bump version
    - receivers registration changed for Android 14

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     //Kotlin-Gradle-AGP compatibility matrix https://kotlinlang.org/docs/gradle-configure-project.html#apply-the-plugin
     ext.mm_kotlinVersion = "1.8.20"
-    ext.mm_gradlePluginVersion = "7.4.0"
+    ext.mm_gradlePluginVersion = '7.4.0'
     repositories {
         google()
         mavenCentral()
@@ -22,9 +22,9 @@ plugins {
 
 ext {
     mm_minSdkVersion = 16
-    mm_compileSdkVersion = 33
-    mm_targetSdkVersion = 33
-    mm_buildToolsVersion = "33.0.0"
+    mm_compileSdkVersion = 34
+    mm_targetSdkVersion = 34
+    mm_buildToolsVersion = "34.0.0"
     mm_firebaseMessagingVersion = "22.0.0"
     mm_gmsLocationVersion = "18.0.0"
     mm_constraintLayoutVersion = "2.1.4"
