--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ android.enableJetifier=true
 #org.gradle.configure?ondemand=true
 org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.disableAutomaticComponentCreation=true
+android.suppressUnsupportedCompileSdk=34
