Pull request #398: Ikresic MM-6028 android fix sonarqube reports
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-6028-android-fix-sonarqube-reports to master

Squashed commit of the following:

commit 012fd14d079323c56a46b79792c3e1b2d9f11cf3
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Nov 1 14:14:25 2023 +0100

    - updated lombok version

commit 480486aa831a1d2a00d5b7f6144d8dce7be3b321
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Nov 1 14:13:46 2023 +0100

    -

commit d8034b4274dab0f14c8fecc7dccdaa46cdce3829
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Nov 1 12:05:51 2023 +0100

    - updated sonar junit path

commit ce1d5b87efc3abf67b332500f8023dd43670586b
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Oct 25 16:08:40 2023 +0200

    - updated lombok version

commit 79a3ed4165c1e0dbe02f602d0d41b6c46a8a9a4f
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Oct 25 15:17:50 2023 +0200

    - updated androidLint reportPaths

commit f0a2799ae91b2bc66c4a481473d9619f3cfd1279
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Oct 25 14:38:36 2023 +0200

    - updated lombok version

commit 010cf41ea14186b6b045a1c1eb25e95a977d3209
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Oct 25 11:22:38 2023 +0200

    - updated lombok version

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
     id 'maven-publish'
     id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
     id 'org.jetbrains.kotlin.android' version "$mm_kotlinVersion" apply false
-    id "org.sonarqube" version "4.0.0.2929"
+    id "org.sonarqube" version "4.4.1.3373"
     id "jacoco"
 }
 
@@ -119,12 +119,14 @@ sonar {
         property "sonar.projectVersion", project.version
         property "sonar.projectName", "infobip-mobile-messaging-android"
         property "sonar.projectKey" , "infobip-mobile-messaging-android"
+        property "sonar.androidLint.reportPaths", "${project.buildDir}/reports/lint-results-debug.xml"
         property "sonar.exclusions", "" +
                 "infobip-mobile-messaging-android-demo/**/*, " +
                 "infobip-mobile-messaging-android-cryptor-migration/**/*, " +
                 "infobip-mobile-messaging-android-test/**/*, " +
                 "infobip-rtc-ui/**/*"
         property "sonar.java.coveragePlugin", "jacoco"
+        property "sonar.junit.reportsPath", "${project.buildDir}/test-results/test/"
         property "sonar.coverage.jacoco.xmlReportPaths", "" +
                 "${project.projectDir}/infobip-mobile-messaging-android-geo-sdk/build/reports/jacoco/debugCoverage/debugCoverage.xml, " +
                 "${project.projectDir}/infobip-mobile-messaging-android-inbox-sdk/build/reports/jacoco/debugCoverage/debugCoverage.xml, " +
