Pull request #400: Jmisko MCA-3412 remove multidex
Merge in MML/infobip-mobile-messaging-android from jmisko-MCA-3412-remove_multidex to master

Squashed commit of the following:

commit 4a07a55a389920aee40be15c67ab8fd6235d8250
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Tue Nov 21 09:03:29 2023 +0100

    MCA-3412 -move multidex to chat debug build type

commit d075cdd2b6beabd3e090d159c2aa2982d19d68ef
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Wed Nov 15 12:23:10 2023 +0100

    MCA-3412 - multidex for chat android tests

commit 535ff7d4e62df4e93b5553c0db431f34b2a155f1
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Wed Nov 15 11:05:03 2023 +0100

    MCA-3412 - revert java 8 compatibility, remove multidex enabled from chat, add desugaring to rtcui to pass lint

commit 0a18ec74deb0bfadc79e32af71e145a6a1e98268
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Fri Nov 10 11:04:04 2023 +0100

    MCA-3412 - enable multidex for chat android test

commit ea71edd16fb2510b359f3d9711af1e6e5206e0a4
Author: Jakub Miško <Jakub.Misko@infobip.com>
Date:   Fri Nov 10 09:16:08 2023 +0100

    MCA-3412 - remove multidex and de-sugaring from chat and rtcui

--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -33,7 +33,6 @@ android {
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         consumerProguardFiles 'proguard-rules.pro'
         vectorDrawables.useSupportLibrary = true
-        multiDexEnabled true
     }
 
     buildFeatures {
@@ -43,6 +42,8 @@ android {
     buildTypes {
         debug {
             testCoverageEnabled true
+            //needed for androidTests
+            multiDexEnabled = true
         }
         release {
             minifyEnabled false
@@ -50,14 +51,13 @@ android {
         }
     }
 
-    compileOptions {
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     lintOptions {
@@ -93,13 +93,12 @@ dependencies {
     androidTestImplementation "junit:junit:4.12"
     androidTestImplementation "org.mockito:mockito-core:1.10.19"
     androidTestImplementation 'com.nanohttpd:nanohttpd:2.1.0'
+    androidTestImplementation 'com.android.support:multidex:2.0.1'
 
     testImplementation project(":infobip-mobile-messaging-android-test")
     testImplementation "junit:junit:4.12"
     testImplementation "org.mockito:mockito-core:1.10.19"
 
-    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$mm_desugarJdkVersion"
-    implementation 'com.android.support:multidex:2.0.1'
 }
 
 android.libraryVariants.all { variant ->
