--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -52,9 +52,9 @@ dependencies {
     api project(":infobip-mobile-messaging-api-java")
     api project(":infobip-mobile-messaging-android-resources")
     api "com.google.firebase:firebase-messaging:${mm_firebaseMessagingVersion}"
+    api "com.google.android.gms:play-services-location:${mm_gmsLocationVersion}"
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.gms:play-services-base:18.2.0'
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
