Pull request #412: Aboldyrev MM-5225 ungeo
Merge in MML/infobip-mobile-messaging-android from aboldyrev-MM-5225-ungeo to master

Squashed commit of the following:

commit 1f4b65205add2264d4c7f246e6803bd577371491
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Thu Dec 28 09:34:09 2023 +0100

    play services base added

commit a1e56f7178c69642441f33dee3fe634b804f7230
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed Dec 27 22:52:20 2023 +0100

    unused import

commit 4e102b97298aee7cbaed2162906d7fd9d0842dda
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed Dec 27 22:48:59 2023 +0100

    back to GoogleApiAvailability for getErrorDialog & HMS support at Cordova

--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     api project(":infobip-mobile-messaging-api-java")
     api project(":infobip-mobile-messaging-android-resources")
     api "com.google.firebase:firebase-messaging:${mm_firebaseMessagingVersion}"
+    api "com.google.android.gms:play-services-base:18.2.0"
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.appcompat:appcompat:1.3.1'
 
